# SyntaxError

./: .gitignore  .gitmodules  Code.py  README.md  code.py  environment.yaml  environment.yml  eslint.config.mjs  extension.js  generated_code.json  input.json  package-lock.json  package.json  previous_responses.txt  pyproject.toml  setup.sh  standard_spec.json
Data/Input/: input_2024-10-24_11-18-20.json  input_2024-10-24_12-21-09.json  input_202410190818442.json  input_202410190827495.json
Data/Standard_spec/: standard_spec_2024-10-24_11-18-20.json  standard_spec_2024-10-24_12-21-09.json  standard_spec_202410190818442.json  standard_spec_202410190827495.json
src/: afl-cmin.py  autodict.sh  code generate.ipynb  compile.py  custom_mutator.py  example  example.cpp  formal.ipynb  generate.py  main.ipynb  main.py  parallel.py  pipeline.py  process_data.py  program  program.cpp  qa.ipynb  sanitizer.py  seed_generator qwen Instruct.ipynb  seed_generator yi coder chat.ipynb  temp  temp.cpp  temp.ipynb  test.ipynb  tmin.py  train.py  train_debug.py  train_qa.py
src/AI/: .project-root
src/EX/Announcer/: CHANGELOG.md  README.md  extension.js  package-lock.json  package.json
src/EX/Prototype/: CHANGELOG.md  README.md  extension.js  package-lock.json  package.json
src/EX/Prototype/src/: api.js  extension.js
src/QaA/: README.md  adapter_config.json  config.json
src/code/: code generator.ipynb
src/qa/: adapter_config.json
src/utils/: config.json  json_parser.py  load.py  model.py
src/verifying/: .gitignore  driver_crahes.py  driver_queue.py  temp  temp.cpp
src/verifying/input_dir/: seed1.txt
verifyng/: .gitignore  driver_hangs.py
