[tool.poetry]
name = "syntaxerror"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.8.0"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
