[tool.poetry]
name = "syntaxerror"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.8.0"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
tqdm = "^4.66.5"
datasets = "^3.0.0"
atheris = "^2.3.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
termcolor = "^2.4.0"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
numpy = "^2.1.1"
wllvm = "^1.3.1"
psutil = "^6.0.0"
pre-commit = "^3.8.0"
transformers = "^4.45.2"
wheel = "^0.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"