[tool.poetry]
name = "syntaxerror"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
vllm = "^0.6.3.post1"
wheel = "^0.44.0"
black = "^24.10.0"
pre-commit = "^4.0.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
tqdm = "^4.66.5"
transformers = "^4.46.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
termcolor = "^2.5.0"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
datasets = "^3.0.2"
protobuf = "^5.28.3"
langchain = "^0.3.4"
langchain-community = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"